removed hidden system files and updated batch IDs in whole stacks pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@ pictures/
 data
 src/misc/vcftools/
 
+## system specific
+.directory
+.DS_Store
+
+## R hidden files
+.Rhistory
+.RData
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
