updated gitignore for Rmd cache files

--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,10 @@ circos.*
 .DS_Store
 
 ## R hidden files
-.Rhistory
-.RData
-.rdb
-.rdx
+*.Rhistory
+*.RData
+*.rdb
+*.rdx
 
 ## Core latex/pdflatex auxiliary files:
 *.aux
